Updating the Footer detals

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 </div>
 <div> <h1>Helping you find the property of your dreams.</h1>
     Creating quality urban lifestyles, building stronger communities
-<button><a href="#"> Learn More </a></button>
+<p><button><a href="#"> Learn More </a></button></p>
+
 </div>
 <div>
     <h1>Our Products</h1>
@@ -27,5 +28,32 @@
 
     </div>
 </div>
+<div class="footer"> 
+    <div><h1>Vallie's Estate</h1>
+        <p>Solution for easy and flexible house hunting. You can trust us anywhere through this platform.</p>
+        </div>
+    <div>
+        <h1>Property</h1>
+        <p>Learning MOdules</p>
+        <p>Partnership</p>
+        <p>Watch demo</p>
+        <p>Event</p>
+    </div>
+    <div>
+        <h1>About</h1>
+        <p>Our Company</p>
+        <p>Career</p>
+        <p>Investors Relations</p>
+        <p>Social impact</p>
+    </div>
+    <div>
+        <h1>Resources</h1>
+        <p>Contact</p>
+        <p>Give feedback</p>
+        <p>System Status</p>
+        <p>Privacy Policy</p>
+    </div>
+</div>
+
 </body>
 </html>
