Customer Feedback Update on index.html

--- a/index.html
+++ b/index.html
@@ -1,59 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vallie's Estate</title>
-</head>
-<body>
-<div>
-    <h4>Vallie's Estate</h4>
-    <a href="index.html">Home</a>
-    <a href="#">Rent</a>
-    <a href="">Land</a>
-    <a href="">Agent</a>
-    <a href="">Contact Us</a>
-</div>
-<div> <h1>Helping you find the property of your dreams.</h1>
-    Creating quality urban lifestyles, building stronger communities
-<p><button><a href="#"> Learn More </a></button></p>
-
-</div>
-<div>
-    <h1>Our Products</h1>
-    <h2>How it works</h2>
-    <p>This is how our products works</p>
-    <div class="location">
-
-    </div>
-</div>
-<div class="footer"> 
-    <div><h1>Vallie's Estate</h1>
-        <p>Solution for easy and flexible house hunting. You can trust us anywhere through this platform.</p>
-        </div>
+  </head>
+  <body>
     <div>
+      <h4>Vallie's Estate</h4>
+      <a href="index.html">Home</a>
+      <a href="#">Rent</a>
+      <a href="">Land</a>
+      <a href="">Agent</a>
+      <a href="">Contact Us</a>
+    </div>
+    <div>
+      <h1>Helping you find the property of your dreams.</h1>
+      Creating quality urban lifestyles, building stronger communities
+      <p>
+        <button><a href="#"> Learn More </a></button>
+      </p>
+    </div>
+    <div>
+      <h1>Our Products</h1>
+      <h2>How it works</h2>
+      <p>This is how our products works</p>
+      <div class="location"></div>
+    </div>
+    
+    <div class="customers">
+      <div id="cust_1">
+        <h2>Alex Godwin</h2>
+        <h6>South Africa</h6>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat
+          aperiam reprehenderit iste laboriosam quasi voluptas vel quae neque
+          temporibus sequi at eos, earum illo debitis, id corrupti recusandae
+          eum? Voluptatibus.
+        </p>
+      </div>
+      <div id="cust_2">
+        <h2>Alex Godwin</h2>
+        <h6>South Africa</h6>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat
+          aperiam reprehenderit iste laboriosam quasi voluptas vel quae neque
+          temporibus sequi at eos, earum illo debitis, id corrupti recusandae
+          eum? Voluptatibus.
+        </p>
+      </div>
+      <div id="cust_3">
+        <h2>Alex Godwin</h2>
+        <h6>South Africa</h6>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat
+          aperiam reprehenderit iste laboriosam quasi voluptas vel quae neque
+          temporibus sequi at eos, earum illo debitis, id corrupti recusandae
+          eum? Voluptatibus.
+        </p>
+      </div>
+    </div>
+    <div class="footer">
+      <div>
+        <h1>Vallie's Estate</h1>
+        <p>
+          Solution for easy and flexible house hunting. You can trust us
+          anywhere through this platform.
+        </p>
+      </div>
+      <div>
         <h1>Property</h1>
         <p>Learning MOdules</p>
         <p>Partnership</p>
         <p>Watch demo</p>
         <p>Event</p>
-    </div>
-    <div>
+      </div>
+      <div>
         <h1>About</h1>
         <p>Our Company</p>
         <p>Career</p>
         <p>Investors Relations</p>
         <p>Social impact</p>
-    </div>
-    <div>
+      </div>
+      <div>
         <h1>Resources</h1>
         <p>Contact</p>
         <p>Give feedback</p>
         <p>System Status</p>
         <p>Privacy Policy</p>
+      </div>
     </div>
-</div>
-
-</body>
+  </body>
 </html>
