--- a/index.html
+++ b/index.html
@@ -28,7 +28,15 @@
       <p>This is how our products works</p>
       <div class="location"></div>
     </div>
-    
+    <div class="properties">
+      <h1>Our Featured Properties.</h1>
+      <p>
+        One of our biggest product to be featured and that has sold out ofthe
+        most.
+      </p>
+      <!-- Insert Images  for  The Palace, IVY RORY and REXONA, the prices and the phases. -->
+      <button><a href="#">View more</a></button>
+    </div>
     <div class="customers">
       <div id="cust_1">
         <h2>Alex Godwin</h2>
@@ -60,6 +68,7 @@
           eum? Voluptatibus.
         </p>
       </div>
+      <button><a href="#"> View more</a></button>
     </div>
     <div class="footer">
       <div>
