Index.html how it works Update

--- a/index.html
+++ b/index.html
@@ -26,8 +26,34 @@
       <h1>Our Products</h1>
       <h2>How it works</h2>
       <p>This is how our products works</p>
-      <div class="location"></div>
+      <div class="location">
+        <h1>Find Home</h1>
+        <p>
+          Our Properies are located at prime areas where by there won't ne
+          problem with transportation
+        </p>
+      </div>
+      <div class="payment">
+        <p>
+          Our estates comes with good network, portable water, 24hrs light and
+          round the clock security.
+        </p>
+      </div>
+      <div class="official">
+        <p>
+          We have been in business for over 32 years, for client outside the
+          country you can trust us to deliver well.
+        </p>
+      </div>
     </div>
+
+    <div  class="choose">
+      <!-- Insert the image -->
+      <h1>Why you should choose us.</h1>
+      <p>Creating quality urban lifestyles, building stronger communities</p>
+      World class Affordable Trusted Amenities
+    </div>
+
     <div class="properties">
       <h1>Our Featured Properties.</h1>
       <p>
