Files arrange for images and Update

--- a/index.html
+++ b/index.html
@@ -22,24 +22,31 @@
         <button><a href="#"> Learn More </a></button>
       </p>
     </div>
+        <div> Location
+            Property Type
+            Max Price
+            <button>Search</button>
+        </div>
     <div>
       <h1>Our Products</h1>
       <h2>How it works</h2>
       <p>This is how our products works</p>
       <div class="location">
-        <h1>Find Home</h1>
+        <h3>Find Home</h3>
         <p>
           Our Properies are located at prime areas where by there won't ne
           problem with transportation
         </p>
       </div>
       <div class="payment">
+        <h3>Make Payments</h3>
         <p>
           Our estates comes with good network, portable water, 24hrs light and
           round the clock security.
         </p>
       </div>
       <div class="official">
+        <h3>Make it official</h3>
         <p>
           We have been in business for over 32 years, for client outside the
           country you can trust us to deliver well.
@@ -60,10 +67,23 @@
         One of our biggest product to be featured and that has sold out ofthe
         most.
       </p>
+<div>
+    The Palace  Duplex
+    Lekki,phase 2 $2000
+</div>
+<div> IVY RORY  Duplex
+    Lekki,phase 2   $2000
+</div>
+<div>
+    REXONA  Duplex
+    Lekki, phase 2  $2000
+</div>
       <!-- Insert Images  for  The Palace, IVY RORY and REXONA, the prices and the phases. -->
       <button><a href="#">View more</a></button>
     </div>
     <div class="customers">
+        <h1>Our Esteemed Customers</h1>
+        <p>This is what our clients are saying.</p>
       <div id="cust_1">
         <h2>Alex Godwin</h2>
         <h6>South Africa</h6>
