--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" href="index.css" type="text/css" />
     <title>Vallie's Estate</title>
   </head>
   <body>
-    <div>
+    <div class="home">
       <h4>Vallie's Estate</h4>
       <a href="index.html">Home</a>
       <a href="#">Rent</a>
@@ -21,17 +21,18 @@
       <p>
         <button><a href="#"> Learn More </a></button>
       </p>
+      <img src="images/image 1.png" alt="House Image 1" />
     </div>
-        <div> Location
-            Property Type
-            Max Price
-            <button>Search</button>
-        </div>
+    <div>
+      Location Property Type Max Price
+      <button>Search</button>
+    </div>
     <div>
       <h1>Our Products</h1>
       <h2>How it works</h2>
       <p>This is how our products works</p>
       <div class="location">
+        <img src="images/address mark.png" alt="Address Mark" />
         <h3>Find Home</h3>
         <p>
           Our Properies are located at prime areas where by there won't ne
@@ -41,11 +42,16 @@
       <div class="payment">
         <h3>Make Payments</h3>
         <p>
+          <img src="images/Smart house.png" alt="Smart House" />
           Our estates comes with good network, portable water, 24hrs light and
           round the clock security.
         </p>
       </div>
       <div class="official">
+        <img
+          src="images/Secure data protection with fingerprint and lock.png"
+          alt="Secure Image"
+        />
         <h3>Make it official</h3>
         <p>
           We have been in business for over 32 years, for client outside the
@@ -54,7 +60,8 @@
       </div>
     </div>
 
-    <div  class="choose">
+    <div class="choose">
+        <img src="images/image 2.png" alt="House Image 2">
       <!-- Insert the image -->
       <h1>Why you should choose us.</h1>
       <p>Creating quality urban lifestyles, building stronger communities</p>
@@ -67,23 +74,15 @@
         One of our biggest product to be featured and that has sold out ofthe
         most.
       </p>
-<div>
-    The Palace  Duplex
-    Lekki,phase 2 $2000
-</div>
-<div> IVY RORY  Duplex
-    Lekki,phase 2   $2000
-</div>
-<div>
-    REXONA  Duplex
-    Lekki, phase 2  $2000
-</div>
+      <div> <img src="images/image 3.png" alt="House Image 3"> The Palace Duplex Lekki,phase 2 $2000</div>
+      <div> <img src="images/image 4.png" alt="House Image 4"> IVY RORY Duplex Lekki,phase 2 $2000</div>
+      <div> <img src="images/image 5.png" alt="House Image 5"> REXONA Duplex Lekki, phase 2 $2000</div>
       <!-- Insert Images  for  The Palace, IVY RORY and REXONA, the prices and the phases. -->
       <button><a href="#">View more</a></button>
     </div>
     <div class="customers">
-        <h1>Our Esteemed Customers</h1>
-        <p>This is what our clients are saying.</p>
+      <h1>Our Esteemed Customers</h1>
+      <p>This is what our clients are saying.</p>
       <div id="cust_1">
         <h2>Alex Godwin</h2>
         <h6>South Africa</h6>
