--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="choose">
-        <img src="images/image 2.png" alt="House Image 2">
+        <img src="images/image 2.png" alt="House Image 2" class="img_2">
       <!-- Insert the image -->
       <h1>Why you should choose us.</h1>
       <p>Creating quality urban lifestyles, building stronger communities</p>
