Stylesheet Update Formatting

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
   </head>
   <body>
     <div class="home">
-      <h4>Vallie's Estate</h4>
+      Vallie's Estate
       <a href="index.html">Home</a>
       <a href="#">Rent</a>
       <a href="">Land</a>
       <a href="">Agent</a>
       <a href="">Contact Us</a>
     </div>
+    
     <div>
       <h1>Helping you find the property of your dreams.</h1>
       Creating quality urban lifestyles, building stronger communities
