--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
       Location Property Type Max Price
       <button>Search</button>
     </div>
-    <div>
+    <div class="products">
       <h1>Our Products</h1>
       <h2>How it works</h2>
       <p>This is how our products works</p>
       <div class="location">
-        <img src="images/address mark.png" alt="Address Mark" />
+        <img src="images/address mark.png" alt="Address Mark" class="loc_pin"/>
         <h3>Find Home</h3>
         <p>
           Our Properies are located at prime areas where by there won't ne
@@ -41,9 +41,10 @@
         </p>
       </div>
       <div class="payment">
+        
+      <img src="images/Smart house.png" alt="Smart House" class="Smart"/>
         <h3>Make Payments</h3>
         <p>
-          <img src="images/Smart house.png" alt="Smart House" />
           Our estates comes with good network, portable water, 24hrs light and
           round the clock security.
         </p>
