Products Div Styling

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h1>Our Products</h1>
       <h2>How it works</h2>
       <p>This is how our products works</p>
-      <div class="location">
+      <div id="location">
         <img src="images/address mark.png" alt="Address Mark" class="loc_pin" />
         <h3>Find Home</h3>
         <p>
@@ -40,7 +40,7 @@
           problem with transportation
         </p>
       </div>
-      <div class="payment">
+      <div id="payment">
         <img src="images/Smart house.png" alt="Smart House" class="Smart" />
         <h3>Make Payments</h3>
         <p>
@@ -48,7 +48,7 @@
           round the clock security.
         </p>
       </div>
-      <div class="official">
+      <div id="official">
         <img
           src="images/Secure data protection with fingerprint and lock.png"
           alt="Secure Image"
@@ -65,9 +65,11 @@
     <div class="choose">
       <img src="images/image 2.png" alt="House Image 2" class="img_2" />
       <!-- Insert the image -->
+      <div id="choose">
       <h1>Why you should choose us.</h1>
       <p>Creating quality urban lifestyles, building stronger communities</p>
       World class Affordable Trusted Amenities
+    </div>
     </div>
 
     <div class="properties">
