--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
           problem with transportation
         </p>
       </div>
-      <div id="payment">
-        <img src="images/Smart house.png" alt="Smart House" class="Smart" />
+      <div class="payment">
+        <img src="images/Smart house.png" alt="Smart House" id="smart" />
         <h3>Make Payments</h3>
         <p>
           Our estates comes with good network, portable water, 24hrs light and
@@ -131,29 +131,29 @@
       <button><a href="#"> View more</a></button>
     </div>
     <div class="footer">
-      <div>
-        <h1>Vallie's Estate</h1>
+      <div id="vallie">
+        <h5>Vallie's Estate</h5>
         <p>
           Solution for easy and flexible house hunting. You can trust us
           anywhere through this platform.
         </p>
       </div>
-      <div>
-        <h1>Property</h1>
-        <p>Learning MOdules</p>
+      <div id="property">
+        <h5>Property</h5>
+        <p>Learning Modules</p>
         <p>Partnership</p>
         <p>Watch demo</p>
         <p>Event</p>
       </div>
-      <div>
-        <h1>About</h1>
+      <div id="about">
+        <h5>About</h5>
         <p>Our Company</p>
         <p>Career</p>
         <p>Investors Relations</p>
         <p>Social impact</p>
       </div>
-      <div>
-        <h1>Resources</h1>
+      <div id="resource">
+        <h5>Resources</h5>
         <p>Contact</p>
         <p>Give feedback</p>
         <p>System Status</p>
