--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
       <a href="">Contact Us</a>
     </div>
 
-    <div>
+    <div class="helping_1">
       <h1>Helping you find the property of your dreams.</h1>
       Creating quality urban lifestyles, building stronger communities
       <p>
         <button><a href="#"> Learn More </a></button>
       </p>
-      <img src="images/image 1.png" alt="House Image 1" />
+      <img src="images/image 1.png" alt="House Image 1" id="Helping"/>
     </div>
     <div>
       Location Property Type Max Price
@@ -130,34 +130,42 @@
       </div>
       <button><a href="#"> View more</a></button>
     </div>
+    <!-- The Footer in blue -->
     <div class="footer">
       <div id="vallie">
-        <h5>Vallie's Estate</h5>
+        Vallie's Estate
         <p>
           Solution for easy and flexible house hunting. You can trust us
           anywhere through this platform.
         </p>
       </div>
-      <div id="property">
-        <h5>Property</h5>
-        <p>Learning Modules</p>
-        <p>Partnership</p>
-        <p>Watch demo</p>
-        <p>Event</p>
+      <div class="ft_prt_2">
+        <div id="property">
+          Property
+          <p>Learning Modules</p>
+          <p>Partnership</p>
+          <p>Watch demo</p>
+          <p>Event</p>
+        </div>
       </div>
+      <div class="ft_abt_3">
+
       <div id="about">
-        <h5>About</h5>
+        About
         <p>Our Company</p>
         <p>Career</p>
         <p>Investors Relations</p>
         <p>Social impact</p>
       </div>
-      <div id="resource">
-        <h5>Resources</h5>
-        <p>Contact</p>
-        <p>Give feedback</p>
-        <p>System Status</p>
-        <p>Privacy Policy</p>
+      </div>
+      <div class="ft_res_3">
+        <div id="resource">
+          Resources
+          <p>Contact</p>
+          <p>Give feedback</p>
+          <p>System Status</p>
+          <p>Privacy Policy</p>
+        </div>
       </div>
     </div>
   </body>
