Footer division Update

--- a/index.html
+++ b/index.html
@@ -132,13 +132,15 @@
     </div>
     <!-- The Footer in blue -->
     <div class="footer">
-      <div id="vallie">
-        Vallie's Estate
-        <p>
-          Solution for easy and flexible house hunting. You can trust us
-          anywhere through this platform.
-        </p>
-      </div>
+        <div class="ft_val_1">
+          <div id="vallie">
+            Vallie's Estate
+            <p>
+              Solution for easy and flexible house hunting. You can trust us
+              anywhere through this platform.
+            </p>
+          </div>
+        </div>
       <div class="ft_prt_2">
         <div id="property">
           Property
