Footer division Update

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
     <!-- The Footer in blue -->
     <div class="footer">
         <div class="ft_val_1">
-          <div id="vallie">
-            Vallie's Estate
+          <div class="vallie">
+            <h4> Vallie's Estate</h4>
             <p>
               Solution for easy and flexible house hunting. You can trust us
               anywhere through this platform.
@@ -142,7 +142,7 @@
           </div>
         </div>
       <div class="ft_prt_2">
-        <div id="property">
+        <div class="property">
           Property
           <p>Learning Modules</p>
           <p>Partnership</p>
@@ -151,8 +151,7 @@
         </div>
       </div>
       <div class="ft_abt_3">
-
-      <div id="about">
+        <div class="about">
         About
         <p>Our Company</p>
         <p>Career</p>
@@ -160,8 +159,8 @@
         <p>Social impact</p>
       </div>
       </div>
-      <div class="ft_res_3">
-        <div id="resource">
+      <div class="ft_res_4">
+        <div class="resource">
           Resources
           <p>Contact</p>
           <p>Give feedback</p>
