Customers Div style Update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <p>
         <button><a href="#"> Learn More </a></button>
       </p>
-      <img src="images/image 1.png" alt="House Image 1" id="Helping"/>
+      <img src="images/image 1.png" alt="House Image 1" id="Helping" />
     </div>
     <div>
       Location Property Type Max Price
@@ -66,10 +66,10 @@
       <img src="images/image 2.png" alt="House Image 2" class="img_2" />
       <!-- Insert the image -->
       <div id="choose">
-      <h1>Why you should choose us.</h1>
-      <p>Creating quality urban lifestyles, building stronger communities</p>
-      World class Affordable Trusted Amenities
-    </div>
+        <h1>Why you should choose us.</h1>
+        <p>Creating quality urban lifestyles, building stronger communities</p>
+        World class Affordable Trusted Amenities
+      </div>
     </div>
 
     <div class="properties">
@@ -79,71 +79,75 @@
         most.
       </p>
       <div>
-        <img src="images/image 3.png" alt="House Image 3"  class="palace"/>
+        <img src="images/image 3.png" alt="House Image 3" class="palace" />
         <figcaption>The Palace Duplex Lekki,phase 2 $2000</figcaption>
-        
-        <img src="images/image 4.png" alt="House Image 4" class="rory"/>
+
+        <img src="images/image 4.png" alt="House Image 4" class="rory" />
         <figcaption>IVY RORY Duplex Lekki,phase 2 $2000</figcaption>
-      
-        <img src="images/image 5.png" alt="House Image 5" class="rexona"/>
-        <figcaption>
-          REXONA Duplex
-          Lekki,phase 2
-          $2000
-        </figcaption>
+
+        <img src="images/image 5.png" alt="House Image 5" class="rexona" />
+        <figcaption>REXONA Duplex Lekki,phase 2 $2000</figcaption>
       </div>
       <!-- Insert Images  for  The Palace, IVY RORY and REXONA, the prices and the phases. -->
-      <button><a href="#">View more</a></button>
     </div>
-    <div class="customers">
-      <h1>Our Esteemed Customers</h1>
-      <p>This is what our clients are saying.</p>
-      <div id="cust_1">
-        <h3>Alex Godwin</h3>
-        <p>South Africa</p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat
-          aperiam reprehenderit iste laboriosam quasi voluptas vel quae neque
-          temporibus sequi at eos, earum illo debitis, id corrupti recusandae
-          eum? Voluptatibus.
-        </p>
-      </div>
-      <div id="cust_2">
-        <h3>Alex Godwin</h3>
-        <p>South Africa</p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat
-          aperiam reprehenderit iste laboriosam quasi voluptas vel quae neque
-          temporibus sequi at eos, earum illo debitis, id corrupti recusandae
-          eum? Voluptatibus.
-        </p>
-      </div>
-      <div id="cust_3">
-        <h3>Alex Godwin</h3>
-        <p>South Africa</p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat
-          aperiam reprehenderit iste laboriosam quasi voluptas vel quae neque
-          temporibus sequi at eos, earum illo debitis, id corrupti recusandae
-          eum? Voluptatibus.
-        </p>
+    <button><a href="#">View more</a></button>
+    <div>
+      <div class="customers">
+        <h1>Our Esteemed Customers</h1>
+        <p>This is what our clients are saying.</p>
+        <div class="cust_a_1">
+          <div id="cust_1">
+            <h3>Alex Godwin</h3>
+            <p>South Africa</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat
+              aperiam reprehenderit iste laboriosam quasi voluptas vel quae
+              neque temporibus sequi at eos, earum illo debitis, id corrupti
+              recusandae eum? Voluptatibus.
+            </p>
+          </div>
+        </div>
+        <div class="cust_a_2">
+          <div id="cust_2">
+            <h3>Alex Godwin</h3>
+            <p>South Africa</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat
+              aperiam reprehenderit iste laboriosam quasi voluptas vel quae
+              neque temporibus sequi at eos, earum illo debitis, id corrupti
+              recusandae eum? Voluptatibus.
+            </p>
+          </div>
+        </div>
+        <div class="cust_a_3">
+          <div id="cust_3">
+            <h3>Alex Godwin</h3>
+            <p>South Africa</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat
+              aperiam reprehenderit iste laboriosam quasi voluptas vel quae
+              neque temporibus sequi at eos, earum illo debitis, id corrupti
+              recusandae eum? Voluptatibus.
+            </p>
+          </div>
+        </div>
       </div>
       <button><a href="#"> View more</a></button>
     </div>
     <!-- The Footer in blue -->
     <div class="footer">
-        <div class="ft_val_1">
-          <div class="vallie">
-            <h4> Vallie's Estate</h4>
-            <p>
-              Solution for easy and flexible house hunting. You can trust us
-              anywhere through this platform.
-            </p>
-          </div>
+      <div class="ft_val_1">
+        <div class="vallie">
+          <h4>Vallie's Estate</h4>
+          <p>
+            Solution for easy and flexible house hunting. You can trust us
+            anywhere through this platform.
+          </p>
         </div>
+      </div>
       <div class="ft_prt_2">
         <div class="property">
-          Property
+          <h4>Property</h4>
           <p>Learning Modules</p>
           <p>Partnership</p>
           <p>Watch demo</p>
@@ -152,16 +156,16 @@
       </div>
       <div class="ft_abt_3">
         <div class="about">
-        About
-        <p>Our Company</p>
-        <p>Career</p>
-        <p>Investors Relations</p>
-        <p>Social impact</p>
-      </div>
+          <h4>About</h4>
+          <p>Our Company</p>
+          <p>Career</p>
+          <p>Investors Relations</p>
+          <p>Social impact</p>
+        </div>
       </div>
       <div class="ft_res_4">
         <div class="resource">
-          Resources
+          <h4>Resources</h4>
           <p>Contact</p>
           <p>Give feedback</p>
           <p>System Status</p>
