Properties Styling Update

--- a/index.html
+++ b/index.html
@@ -78,15 +78,27 @@
         One of our biggest product to be featured and that has sold out ofthe
         most.
       </p>
-      <div>
+      <div class="prts_">
+        <div class="prts__pal1">
+
         <img src="images/image 3.png" alt="House Image 3" class="palace" />
         <figcaption>The Palace Duplex Lekki,phase 2 $2000</figcaption>
 
+        </div>
+        <div class="ptrs_ror2">
+
         <img src="images/image 4.png" alt="House Image 4" class="rory" />
         <figcaption>IVY RORY Duplex Lekki,phase 2 $2000</figcaption>
+        </div>
+        <div class="prts_rex3">
+        <figure>
+          <img src="images/image 5.png" alt="House Image 5" class="rexona" />
+          
+        </figure>
 
-        <img src="images/image 5.png" alt="House Image 5" class="rexona" />
-        <figcaption>REXONA Duplex Lekki,phase 2 $2000</figcaption>
+
+        </div>
+        
       </div>
       <!-- Insert Images  for  The Palace, IVY RORY and REXONA, the prices and the phases. -->
     </div>
