--- a/index.html
+++ b/index.html
@@ -8,25 +8,40 @@
   </head>
   <body>
     <div class="home">
-      Vallie's Estate
-      <a href="index.html">Home</a>
-      <a href="#">Rent</a>
-      <a href="">Land</a>
-      <a href="">Agent</a>
-      <a href="">Contact Us</a>
+      <div class="hm_v">
+        Vallie's Estate
+      </div>
+      <div class="hm_h">
+        <a href="index.html">Home</a>
+      </div>
+      <div class="hm_r">
+        <a href="#">Rent</a>
+      </div>
+      <div class="hm_l">
+        <a href="">Land</a>
+      </div>
+      <div class="hm_a">
+        <a href="">Agent</a>
+      </div>
+      <div class="hm_c">
+        <a href="">Contact Us</a>
+      </div>
+      <div>
+        <button class="but_1"><a href="#"> Get Started</a></button>
+      </div>
     </div>
 
     <div class="helping_1">
       <h1>Helping you find the property of your dreams.</h1>
       Creating quality urban lifestyles, building stronger communities
       <p>
-        <button><a href="#"> Learn More </a></button>
+        <button class="but_2"><a href="#"> Learn More </a></button>
       </p>
       <img src="images/image 1.png" alt="House Image 1" id="Helping" />
     </div>
     <div>
       Location Property Type Max Price
-      <button>Search</button>
+      <button class="but_3">Search</button>
     </div>
     <div class="products">
       <h1>Our Products</h1>
@@ -80,29 +95,22 @@
       </p>
       <div class="prts_">
         <div class="prts__pal1">
-
-        <img src="images/image 3.png" alt="House Image 3" class="palace" />
-        <figcaption>The Palace Duplex Lekki,phase 2 $2000</figcaption>
-
+          <img src="images/image 3.png" alt="House Image 3" class="palace" />
+          <figcaption>The Palace Duplex Lekki,phase 2 $2000</figcaption>
         </div>
         <div class="ptrs_ror2">
-
-        <img src="images/image 4.png" alt="House Image 4" class="rory" />
-        <figcaption>IVY RORY Duplex Lekki,phase 2 $2000</figcaption>
+          <img src="images/image 4.png" alt="House Image 4" class="rory" />
+          <figcaption>IVY RORY Duplex Lekki,phase 2 $2000</figcaption>
         </div>
         <div class="prts_rex3">
-        <figure>
-          <img src="images/image 5.png" alt="House Image 5" class="rexona" />
-          
-        </figure>
-
-
+          <figure>
+            <img src="images/image 5.png" alt="House Image 5" class="rexona" />
+          </figure>
         </div>
-        
       </div>
       <!-- Insert Images  for  The Palace, IVY RORY and REXONA, the prices and the phases. -->
     </div>
-    <button><a href="#">View more</a></button>
+    <button class="but_4"><a href="#">View more</a></button>
     <div>
       <div class="customers">
         <h1>Our Esteemed Customers</h1>
@@ -144,46 +152,46 @@
           </div>
         </div>
       </div>
-      <button><a href="#"> View more</a></button>
+      <button class="but_5"><a href="#"> View more</a></button>
     </div>
     <!-- The Footer in blue -->
-    <div class="footer">
-      <div class="ft_val_1">
-        <div class="vallie">
-          <h4>Vallie's Estate</h4>
-          <p>
-            Solution for easy and flexible house hunting. You can trust us
-            anywhere through this platform.
-          </p>
-        </div>
-      </div>
-      <div class="ft_prt_2">
-        <div class="property">
-          <h4>Property</h4>
-          <p>Learning Modules</p>
-          <p>Partnership</p>
-          <p>Watch demo</p>
-          <p>Event</p>
-        </div>
-      </div>
-      <div class="ft_abt_3">
-        <div class="about">
-          <h4>About</h4>
-          <p>Our Company</p>
-          <p>Career</p>
-          <p>Investors Relations</p>
-          <p>Social impact</p>
-        </div>
-      </div>
-      <div class="ft_res_4">
-        <div class="resource">
-          <h4>Resources</h4>
-          <p>Contact</p>
-          <p>Give feedback</p>
-          <p>System Status</p>
-          <p>Privacy Policy</p>
-        </div>
+  </body>
+  <div class="footer">
+    <div class="ft_val_1">
+      <div class="vallie">
+        <h4>Vallie's Estate</h4>
+        <p>
+          Solution for easy and flexible house hunting. You can trust us
+          anywhere through this platform.
+        </p>
       </div>
     </div>
-  </body>
+    <div class="ft_prt_2">
+      <div class="property">
+        <h4>Property</h4>
+        <p>Learning Modules</p>
+        <p>Partnership</p>
+        <p>Watch demo</p>
+        <p>Event</p>
+      </div>
+    </div>
+    <div class="ft_abt_3">
+      <div class="about">
+        <h4>About</h4>
+        <p>Our Company</p>
+        <p>Career</p>
+        <p>Investors Relations</p>
+        <p>Social impact</p>
+      </div>
+    </div>
+    <div class="ft_res_4">
+      <div class="resource">
+        <h4>Resources</h4>
+        <p>Contact</p>
+        <p>Give feedback</p>
+        <p>System Status</p>
+        <p>Privacy Policy</p>
+      </div>
+    </div>
+  </div>
 </html>
