Helping div Styling Update

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <div class="home">
-      <div class="hm_v">
-        Vallie's Estate
-      </div>
+      <div class="hm_v">Vallie's Estate</div>
       <div class="hm_h">
         <a href="index.html">Home</a>
       </div>
@@ -33,11 +31,15 @@
 
     <div class="helping_1">
       <h1>Helping you find the property of your dreams.</h1>
-      Creating quality urban lifestyles, building stronger communities
-      <p>
+      <div class="crt_p">
+        <p>Creating quality urban lifestyles, building stronger communities</p>
+      </div>
+      <div class="bt_2">
         <button class="but_2"><a href="#"> Learn More </a></button>
-      </p>
-      <img src="images/image 1.png" alt="House Image 1" id="Helping" />
+      </div>
+      <div class="House_Img">
+        <img src="images/image 1.png" alt="House Image 1" />
+      </div>
     </div>
     <div>
       Location Property Type Max Price
