Searching div Styling Update

--- a/index.html
+++ b/index.html
@@ -29,21 +29,38 @@
       </div>
     </div>
 
-    <div class="helping_1">
-      <h1>Helping you find the property of your dreams.</h1>
-      <div class="crt_p">
-        <p>Creating quality urban lifestyles, building stronger communities</p>
-      </div>
-      <div class="House_Img">
-        <img src="images/image 1.png" alt="House Image 1" />
-      </div>
-      <div class="bt_2">
-        <button class="but_2"><a href="#"> Learn More </a></button>
-      </div>
+<div class="Help_al">
+  <div class="helping_1">
+    <h1>Helping you find the property of your dreams.</h1>
+    <p>Creating quality urban lifestyles, building stronger communities</p>
+    <button class="but_2"><a href="#"> Learn More </a></button>
+    <div class="bt_2">
+      <!-- video icon in .video-->
+      <button class="video"> </button>
     </div>
-    <div>
-      Location Property Type Max Price
-      <button class="but_3">Search</button>
+  </div>
+  
+    <div class="House_Img">
+      <img src="images/image 1.png" alt="House Image 1" />
+    </div>
+    
+  
+</div>
+    <div class="search">
+      <div class="loc">
+        Location
+      </div>
+      <div class="prot">
+        Property
+      </div>
+      <div class="type">
+        Type
+      </div>
+      <div class=" max"> Max</div>
+       <div class="prices">
+        Price
+       </div>
+      <button class="but_3"> <img src="images/1086916.png" alt="Search">Search</button>
     </div>
     <div class="products">
       <h1>Our Products</h1>
@@ -160,6 +177,7 @@
   </body>
   <div class="footer">
     <div class="ft_val_1">
+      
       <div class="vallie">
         <h4>Vallie's Estate</h4>
         <p>
