div Styling Update

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="search">
       <div class="loc">
-        Location
+        Location <img src="images/caret.png" alt="caret">
         <p class="search_loc">Lekki</p>
       </div>
       <div class="prot">Property</div>
@@ -54,13 +54,17 @@
       <div class="max">Max</div>
       <div class="prices">Price</div>
       <button class="but_3">
-        <img src="images/1086916.png" alt="Search" />Search
+        <img src="images/search.png" alt="Search" value="Searh"/>Search
       </button>
     </div>
+    <!-- Products-->
     <div class="products">
+      <div class="prd_in">
+
       <h1>Our Products</h1>
       <h2>How it works</h2>
       <p>This is how our products works</p>
+      </div>
       <div id="location">
         <img src="images/address mark.png" alt="Address Mark" class="loc_pin" />
         <h3>Find Home</h3>
@@ -102,7 +106,8 @@
     </div>
 
     <div class="properties">
-      <h1>Our Featured Properties.</h1>
+      <div class="properties_main">
+        <h1>Our Featured Properties.</h1>
       <p>
         One of our biggest product to be featured and that has sold out ofthe
         most.
@@ -121,6 +126,7 @@
             <img src="images/image 5.png" alt="House Image 5" class="rexona" />
           </figure>
         </div>
+      </div>
       </div>
       <!-- Insert Images  for  The Palace, IVY RORY and REXONA, the prices and the phases. -->
     </div>
