div Styling Update

--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         <h1>Helping you find the property of your dreams.</h1>
         <p>Creating quality urban lifestyles, building stronger communities</p>
         <button class="but_2"><a href="#"> Learn More </a></button>
-        <div class="bt_2">
-          <!-- video icon in .video-->
-          <button class="video"></button>
+        <div class="video">
+          
+          <!-- video icon in .video <img src="images/video.png" alt="">-->
+          <button class="video_ico">  &#8227</button>
         </div>
       </div>
 
@@ -59,11 +60,13 @@
     </div>
     <!-- Products-->
     <div class="products">
-      <div class="prd_in">
+      <div class="products_o">
+        <div class="prd_in">
 
-      <h1>Our Products</h1>
-      <h2>How it works</h2>
-      <p>This is how our products works</p>
+          <h1>Our Products</h1>
+          <h2>How it works</h2>
+          <p>This is how our products works</p>
+          </div>
       </div>
       <div id="location">
         <img src="images/address mark.png" alt="Address Mark" class="loc_pin" />
@@ -107,19 +110,23 @@
 
     <div class="properties">
       <div class="properties_main">
-        <h1>Our Featured Properties.</h1>
-      <p>
-        One of our biggest product to be featured and that has sold out ofthe
-        most.
-      </p>
+        <div class="main"><h1>Our Featured Properties.</h1>
+          <p>
+            One of our biggest product to be featured and that has sold out ofthe
+            most.
+          </p></div>
       <div class="prts_">
-        <div class="prts__pal1">
-          <img src="images/image 3.png" alt="House Image 3" class="palace" />
-          <figcaption>The Palace Duplex Lekki,phase 2 $2000</figcaption>
+        <div class="palace">
+          <div class="prts__pal1">
+           <figure> <img src="images/image 3.png" alt="House Image 3" class="palace" />
+            <figcaption>The Palace Duplex Lekki,phase 2 $2000</figcaption>
+          </figure>
+          </div>
         </div>
         <div class="ptrs_ror2">
-          <img src="images/image 4.png" alt="House Image 4" class="rory" />
+          <figure><img src="images/image 4.png" alt="House Image 4" class="rory" />
           <figcaption>IVY RORY Duplex Lekki,phase 2 $2000</figcaption>
+        </figure>
         </div>
         <div class="prts_rex3">
           <figure>
