div Styling Update

--- a/index.html
+++ b/index.html
@@ -99,12 +99,15 @@
     </div>
 
     <div class="choose">
-      <img src="images/image 2.png" alt="House Image 2" class="img_2" />
-      <!-- Insert the image -->
-      <div id="choose">
+<div class="choose_1">
+  <img src="images/image 2.png" alt="House Image 2" class="img_2" />
+  <!-- Insert the image -->
+</div>
+      <div class="choose_2">
         <h1>Why you should choose us.</h1>
         <p>Creating quality urban lifestyles, building stronger communities</p>
-        World class Affordable Trusted Amenities
+        <p class="sidel1">&#9745 World class </p>       <p class="sidel2">&#9745 Trusted </p>
+        <p class="sider1">&#9745 Affordable </p>         <p class="sider2">&#9745 Amenities</p>
       </div>
     </div>
 
