Content Styling Update

--- a/index.html
+++ b/index.html
@@ -114,26 +114,25 @@
     <div class="properties">
       <div class="properties_main">
         <div class="main"><h1>Our Featured Properties.</h1>
-          <p>
-            One of our biggest product to be featured and that has sold out ofthe
-            most.
-          </p></div>
+          <p>One of our biggest product to be featured and that has sold out of the most.  </p>
+        </div>
       <div class="prts_">
-        <div class="palace">
+
           <div class="prts__pal1">
-           <figure> <img src="images/image 3.png" alt="House Image 3" class="palace" />
+           <figure> <img src="images/palace.png" alt="House Image 3" />
             <figcaption>The Palace Duplex Lekki,phase 2 $2000</figcaption>
           </figure>
-          </div>
+          
         </div>
         <div class="ptrs_ror2">
-          <figure><img src="images/image 4.png" alt="House Image 4" class="rory" />
-          <figcaption>IVY RORY Duplex Lekki,phase 2 $2000</figcaption>
+          <figure><img src="images/ivyrory.png" alt="House Image 4" class="rory" />
+          <figcaption>IVY RORY <p>Duplex Lekki,phase 2 $2000</p></figcaption>
         </figure>
         </div>
         <div class="prts_rex3">
           <figure>
-            <img src="images/image 5.png" alt="House Image 5" class="rexona" />
+            <img src="images/rexona.png" alt="House Image 5" />
+            <figcaption> REXONA <p>Duplex Lekki,phase 2 $2000</p></figcaption>
           </figure>
         </div>
       </div>
