--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </div>
 
       </div>
-          <div>
+          <div class="bt_5">
     <button class="but_5"><a href="#"> View more</a></button>
     </div>
     <!-- The Footer in blue -->
