Update the styles

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </p>
       </div>
       <div class="payment">
-        <img src="images/Smart house.png" alt="Smart House" id="smart" />
+        <img src="images/Smart house.png" alt="Smart House" id="smart"  style="height: 100px; width: 100px;"/>
         <h3>Make Payments</h3>
         <p>
           Our estates comes with good network, portable water, 24hrs light and
@@ -113,11 +113,13 @@
 
     <div class="properties">
       <div class="properties_main">
+        <div class="prts_">
         <div class="main"><h1>Our Featured Properties.</h1>
           <p>One of our biggest product to be featured and that has sold out of the most.  </p>
         </div>
-      <div class="prts_">
-
+        <div>
+     </div>
+        <div class="Images">
           <div class="prts__pal1">
            <figure> <img src="images/palace.png" alt="House Image 3" />
             <figcaption>The Palace Duplex Lekki,phase 2 $2000</figcaption>
@@ -126,13 +128,13 @@
         </div>
         <div class="ptrs_ror2">
           <figure><img src="images/ivyrory.png" alt="House Image 4" class="rory" />
-          <figcaption>IVY RORY <p>Duplex Lekki,phase 2 $2000</p></figcaption>
+          <figcaption>IVY RORY Duplex Lekki,phase 2 $2000</figcaption>
         </figure>
         </div>
         <div class="prts_rex3">
           <figure>
             <img src="images/rexona.png" alt="House Image 5" />
-            <figcaption> REXONA <p>Duplex Lekki,phase 2 $2000</p></figcaption>
+            <figcaption> REXONA Duplex Lekki,phase 2 $2000</figcaption>
           </figure>
         </div>
       </div>
