--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Vallie's Estate</title>
   </head>
   <body>
+    <span class="home_o"> 
+
     <div class="home">
       <div class="hm_v">Vallie's Estate</div>
       <div class="hm_h">
@@ -29,6 +31,7 @@
       </div>
     </div>
 
+  </span>
     <div class="Help_al">
       <div class="helping_1">
         <h1>Helping you find the property of your dreams.</h1>
@@ -77,7 +80,7 @@
         </p>
       </div>
       <div class="payment">
-        <img src="images/Smart house.png" alt="Smart House" id="smart"  style="height: 100px; width: 100px;"/>
+        <img src="images/Smart house.png" alt="Smart House" id="smart" "/>
         <h3>Make Payments</h3>
         <p>
           Our estates comes with good network, portable water, 24hrs light and
