Styling Page Update

--- a/index.html
+++ b/index.html
@@ -15,16 +15,15 @@
         <a href="index.html">Home</a>
       </div>
       <div class="hm_r">
-        <a href="#">Rent</a>
-      </div>
+        Rent      </div>
       <div class="hm_l">
-        <a href="">Land</a>
+        Land
       </div>
       <div class="hm_a">
-        <a href="">Agent</a>
+        Agent
       </div>
       <div class="hm_c">
-        <a href="">Contact Us</a>
+        Contact Us
       </div>
       <div>
         <button class="but_1"><a href="#"> Get Started</a></button>
