Styling Page Update

--- a/index.html
+++ b/index.html
@@ -70,9 +70,11 @@
           <p>This is how our products works</p>
           </div>
       </div>
-      <div id="location">
+      <span>
+        <div class="items">
+      <div class="location">
         <img src="images/address mark.png" alt="Address Mark" class="loc_pin" />
-        <h3>Find Home</h3>
+        <h2>Find Home</h2>
         <p>
           Our Properies are located at prime areas where by there won't ne
           problem with transportation
@@ -80,24 +82,26 @@
       </div>
       <div class="payment">
         <img src="images/Smart house.png" alt="Smart House" id="smart" "/>
-        <h3>Make Payments</h3>
+        <h2>Make Payments</h2>
         <p>
           Our estates comes with good network, portable water, 24hrs light and
           round the clock security.
         </p>
       </div>
-      <div id="official">
+      <div class="official">
         <img
           src="images/Secure data protection with fingerprint and lock.png"
           alt="Secure Image"
           class="secure"
         />
-        <h3>Make it official</h3>
+        <h2>Make it official</h2>
         <p>
           We have been in business for over 32 years, for client outside the
           country you can trust us to deliver well.
         </p>
       </div>
+      </div>
+    </span>
     </div>
 
     <div class="choose">
