--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
           country you can trust us to deliver well.
         </p>
       </div>
-      
+
       <div class="payment">
         <img src="images/Smart house.png" alt="Smart House" id="smart" "/>
         <h2>Make Payments</h2>
         <p>
           Our estates comes with good network, portable water, 24hrs light and
           round the clock security.
-        </p>
+        </p>  
       </div>
 
       </div>
@@ -115,19 +115,18 @@
       <div class="choose_2">
         <h1>Why you should choose us.</h1>
         <p>Creating quality urban lifestyles, building stronger communities</p>
-        <p class="sidel1">&#9745 World class </p>       <p class="sidel2">&#9745 Trusted </p>
-        <p class="sider1">&#9745 Affordable </p>         <p class="sider2">&#9745 Amenities</p>
+        <div class="sidel"><p >&#9745 World class </p>       <p>&#9745 Trusted </p></div>
+        <div  class="sider"><p>&#9745 Affordable </p>        <p>&#9745 Amenities</p></div>
       </div>
     </div>
 
     <div class="properties">
       <div class="properties_main">
-        <div class="prts_">
+      
         <div class="main"><h1>Our Featured Properties.</h1>
           <p>One of our biggest product to be featured and that has sold out of the most.  </p>
         </div>
-        <div>
-     </div>
+        <div class="prts_">
         <div class="Images">
           <div class="prts__pal1">
            <figure> <img src="images/palace.png" alt="House Image 3" />
