--- a/index.html
+++ b/index.html
@@ -52,10 +52,15 @@
         Location <img src="images/caret.png" alt="caret">
         <p class="search_loc">Lekki</p>
       </div>
-      <div class="prot">Property</div>
-      <div class="type">Type</div>
-      <div class="max">Max</div>
-      <div class="prices">Price</div>
+      <div class="loc">Property Type
+        <img src="images/caret.png" alt="caret">
+        <p class="search_loc">Duplex</p>
+      </div>
+
+      <div class="loc">Max Price 
+        <img src="images/caret.png" alt="caret">
+        <p class="search_loc">$10000</p>
+      </div>
       <button class="but_3">
         <img src="images/search.png" alt="Search" value="Searh"/>Search
       </button>
