--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="helping_1">
         <h1>Helping you find the property of your dreams.</h1>
         <p>Creating quality urban lifestyles, building stronger communities</p>
-        <button class="but_2"><a href="#"> Learn More </a></button>
+        <button class="but_2">Learn More </button>
         <div class="video">
           
           <!-- video icon in .video <img src="images/video.png" alt="">-->
@@ -154,7 +154,7 @@
 
       </div>
       </div>
-      <button class="but_4"><a href="#">View more</a></button>
+      <button class="but_4">View more</button>
     </div>
     
 
@@ -203,10 +203,10 @@
 
       </div>
           <div class="bt_5">
-    <button class="but_5"><a href="#"> View more</a></button>
+    <button class="but_5"> View more</button>
     </div>
     <!-- The Footer in blue -->
-  </body>
+  
   <div class="footer">
     <div class="ft_val_1">
       <div class="vallie">
@@ -245,4 +245,5 @@
       </div>
     </div>
   </div>
+</body>
 </html>
